# MathMaster

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  README.md
core/: CMakeLists.txt
core/.cache/clangd/index/: astOperand.cpp.26D3BDA958A014D7.idx  astOperator.cpp.D5C3A457FD6F0676.idx  interpreter.cpp.F84B1A30E2BF174F.idx  lexer.cpp.50924C1A228A4522.idx  lexer.h.33F8EC0E286B0264.idx  parser.cpp.9FB7D15BD3ECAF1D.idx  token.h.CA3C387AD479FFB2.idx
core/include/: definits.h  lexer.h  parser.h  token.h
core/src/: CMakeLists.txt  lexer.cpp
core/tests/: CMakeLists.txt
